arg to thred function problem

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/a.out",
-            "args": ["2", "122", "111", "111", "8"],
+            "program": "${workspaceFolder}/philo",
+            "args": ["2", "400", "100", "100", "8"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
