--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "string_view": "c",
         "initializer_list": "c",
         "functional": "c",
-        "utility": "c"
+        "utility": "c",
+        "philo.h": "c"
     },
     "makefile.configureOnOpen": false
 }
